feat(auth_service): add soft delete user account; add restore deleted account method
