# backend/gateway/api/docs/swagger.json
@@ -3414,6 +3414,58 @@
                 }
             }
         },
+        "/restore-account": {
+            "post": {
+                "description": "Restore a soft-deleted account within 30 days of deletion",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "RestoreAccount",
+                "parameters": [
+                    {
+                        "description": "Email и пароль",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.RestoreAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.RestoreAccountResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Error.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Error.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Error.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/user/verify": {
             "post": {
                 "description": "Verify user account with code from email",
@@ -4040,6 +4092,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -4236,6 +4291,20 @@
             }
         },
         "entities.ResetPasswordResponse": {
+            "type": "object"
+        },
+        "entities.RestoreAccountRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.RestoreAccountResponse": {
             "type": "object"
         },
         "entities.RevokeAllTokensResponse": {
